sre/kubernetes/dummy-pdf-or-png-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dummy-pdf-or-png-svc
spec:
  selector:
    app: dummy-pdf-or-png
  ports:
    - port: 3000
